--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+		<div class="moviePic">
+			<img src="https://m.media-amazon.com/images/I/81dae9nZFBS._AC_UF894,1000_QL80_.jpg" alt="movie">
+		</div>
+		<p class="movieDetail">"Inception" follows Dom Cobb, a skilled thief who enters people's dreams to steal secrets. He is offered a chance to clear his criminal record if he can perform the impossible: inception, planting an idea in someone's mind.</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
